# rust-sonar-report-reader

./: .gitignore  Cargo.toml  README.md  build.rs
src/: enums.rs  main.rs
src/proto/: report_parts.proto
